# vibe-napkin

./: .gitignore  LICENSE  README.md  pyproject.toml
src/vibe_napkin/: __init__.py  cli.py
src/vibe_napkin/commands/: init_cmd.py  list_cmd.py  load_cmd.py  save_cmd.py  tidy_cmd.py  wipe_cmd.py
src/vibe_napkin/core/: config.py  mcp.py  scanner.py  template.py  validator.py  zvec_bridge.py
src/vibe_napkin/models/: business_unit.py  checkpoint.py
src/vibe_napkin/templates/: napkin-config.toml
src/vibe_napkin/templates/docs/: README.md
src/vibe_napkin/templates/docs/业务单元/: README.md  _template.md
src/vibe_napkin/templates/docs/约束基线/: README.md  _baseline-产品约束.md  _baseline-技术约束.md  _baseline-部署约束.md
src/vibe_napkin/templates/mcp/: _config.py  build_kb.py  server.py
tests/: conftest.py  test_checkpoint.py  test_config.py  test_init_cmd.py  test_mcp.py  test_saveloadlist.py  test_scanner.py  test_template.py  test_tidy_cmd.py  test_validator.py  test_wipe_cmd.py  test_zvec_bridge.py
