[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vibe-napkin"
version = "0.1.0"
description = "You mouth the code, we wipe the crumbs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "tomlkit>=0.12.0",
    "rich>=13.0.0",
]

[project.scripts]
vibe-napkin = "vibe_napkin.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vibe_napkin"]

[tool.hatch.build]
artifacts = ["/src/vibe_napkin/templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]